# fuzzy-spaghetti

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: usage.md
scripts/: process_vol_surface.py
src/fuzzy_spaghetti/: __init__.py  cli.py  config.py  ingest.py  mcp_server.py  search.py  vectorize.py
