[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzy-spaghetti"
version = "0.1.0"
description = "Full-text search over a personal research paper library"
requires-python = ">=3.10"
dependencies = [
    "pikepdf>=9.0",
    "pdfplumber>=0.11",
    "rank-bm25>=0.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "lancedb>=0.17",
    "pyarrow>=17",
    "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
ocr = ["ocrmypdf>=16"]
dev = ["pytest>=8"]

[project.scripts]
fz-ingest = "fuzzy_spaghetti.cli:ingest_main"
fz-search = "fuzzy_spaghetti.cli:search_main"
fz-serve = "fuzzy_spaghetti.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy_spaghetti"]
